--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
       "typescript": "^4.3.4"
    },
    "dependencies": {
+      "class-validator": "^0.13.1",
       "express": "^4.17.1",
       "pg": "^8.6.0",
       "reflect-metadata": "^0.1.10",
@@ -20,6 +21,7 @@
    "scripts": {
       "start": "ts-node src/index.ts",
       "typeorm": "ts-node ./node_modules/typeorm/cli.js",
-      "dev": "nodemon --exec ts-node src/index.ts"
+      "dev": "nodemon --exec ts-node src/index.ts",
+      "build":"tsc"
    }
 }
